<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>eu.cdevreeze.pagilaapp</groupId>
	<artifactId>application</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<java.version>21</java.version>
		<!-- Overriding jOOQ version from 3.19.X to 3.20.X, in order to use fetchTrimmedCharValues setting -->
		<jooq.version>3.20.7</jooq.version>
		<!-- See https://javadoc.io/doc/org.mockito/mockito-core/latest/org.mockito/org/mockito/Mockito.html#0.3 -->
		<argLine/>
	</properties>
	<dependencies>
		<dependency>
			<groupId>eu.cdevreeze.pagilaapp</groupId>
			<artifactId>domain</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>eu.cdevreeze.pagilaapp</groupId>
			<artifactId>service</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-testcontainers</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<version>1.21.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>1.21.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.tngtech.archunit</groupId>
			<artifactId>archunit-junit5</artifactId>
			<version>1.4.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<!-- See https://javadoc.io/doc/org.mockito/mockito-core/latest/org.mockito/org/mockito/Mockito.html#0.3 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<!-- Alternatively, we could use the classpath for tests, to avoid issues with bytecode enhancement -->
					<useModulePath>true</useModulePath>
					<!-- See https://nipafx.dev/five-command-line-options-hack-java-module-system/ -->
					<!-- The extra "read" of jakarta.persistence is for ArchitectureTest -->
					<argLine>
						@{argLine}
						-javaagent:${org.mockito:mockito-core:jar}
						--add-opens=java.base/java.lang=spring.core
						--add-modules=jakarta.persistence
						--add-reads=eu.cdevreeze.pagilaapp.application=jakarta.persistence
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<!-- Alternatively, we could use the classpath for tests, to avoid issues with bytecode enhancement -->
					<useModulePath>true</useModulePath>
					<!-- See https://youtrack.jetbrains.com/articles/SUPPORT-A-883/How-to-resolve-java.lang.ClassFormatError-accessible-module-java.base-does-not-opens-java.lang-to-unnamed-module -->
					<!-- See also https://nipafx.dev/five-command-line-options-hack-java-module-system/ -->
					<argLine>
						@{argLine}
						--add-opens=java.base/java.lang=ALL-UNNAMED,spring.core
						--add-opens=java.base/java.util=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
